# vietchat

./: .gitignore  README.md  example.env  example.secrets.toml  pyproject.toml
tests/vietchat/: conftest.py  test_utils.py
tests/vietchat/text/: test_text_openai.py
tests/vietchat/translation/: test_translator.py
vietchat/: ai_provider.py  chat.py  settings.py  utils.py
vietchat/audio/: audio_utils.py  base.py  speech_basic.py  speech_elevenlabs.py  speech_groq.py  speech_gtts.py  speech_openai.py  speech_rec.py
vietchat/storage/: local.py
vietchat/text/: text_groq.py  text_openai.py
vietchat/translation/: translator.py
